2014-09-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/61745
	* g++.dg/template/pr61745.C: New.

2014-09-17  Marek Polacek  <polacek@redhat.com>

	PR c/61854
	* gcc.dg/cpp/pr61854-1.c: New test.
	* gcc.dg/cpp/pr61854-2.c: New test.
	* gcc.dg/cpp/pr61854-3.c: New test.
	* gcc.dg/cpp/pr61854-3.h: New test.
	* gcc.dg/cpp/pr61854-4.c: New test.
	* gcc.dg/cpp/pr61854-5.c: New test.
	* gcc.dg/cpp/pr61854-6.c: New test.
	* gcc.dg/cpp/pr61854-7.c: New test.
	* gcc.dg/cpp/pr61854-c90.c: New test.
	* gcc.dg/cpp/pr61854-c94.c: New test.

2014-09-17  Jakub Jelinek  <jakub@redhat.com>

	PR debug/63284
	* gcc.dg/pr63284.c: New test.

	* ada/acats/run_all.sh: Redirect mkdir stderr to /dev/null.

2014-09-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/63241
	* g++.dg/cpp0x/constexpr-63241.C: New.

2014-09-17  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/62768
	* gfortran.dg/filename_null.f90: New test.

2014-09-16  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.dg/pg-override.c: Fix a typo.

2014-09-16  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.dg/pg.c: Fix a typo.

2014-09-16  Richard Biener  <rguenther@suse.de>

	PR testsuite/63258
	* gcc.dg/vect/costmodel/ppc/costmodel-slp-33.c: Remove scan
	for "vectorization not profitable".

2014-09-16  Ilya Tocar  <ilya.tocar@intel.com>

	* gcc.target/i386/avx512f-os-support.h: Remove magic number.

2014-09-16  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/56408
	* gfortran.dg/dg.exp (dg-compile-aux-modules): Workaround
	missing nexted dg-test call support in dejaGNU 1.4.4.

2014-09-15  Andi Kleen  <ak@linux.intel.com>

	* gcc.dg/pg-override.c: New test.
	* gcc.dg/pg.c: New test.
	* gcc.target/i386/fentry-override.c: New test.
	* gcc.target/i386/fentry.c: New test.

2014-09-15  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/56408
	* gfortran.dg/dg.exp (gfortran_test_path, gfortran_aux_module_flags):
	New global vars.
	(dg-compile-aux-modules): New procedure.
	* gfortran.dg/binding_label_tests_10.f03: Remove comment